<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/walkTitleTextView"
        style="@style/WalkListItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="March 6 2022" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/deleteWalkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="@id/walkTitleTextView"
        app:layout_constraintStart_toEndOf="@id/walkTitleTextView"
        app:layout_constraintTop_toTopOf="@id/walkTitleTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timeLabelTextView"
        style="@style/WalkListItemTrackingDataLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/walk_list_item_time_label"
        app:layout_constraintEnd_toStartOf="@id/distanceLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/walkTitleTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timeTextView"
        style="@style/WalkListItemTrackingData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/timeLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/timeLabelTextView"
        tools:text="00:00:00" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/distanceLabelTextView"
        style="@style/WalkListItemTrackingDataLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/walk_list_item_distance_label"
        app:layout_constraintEnd_toStartOf="@id/averageSpeedLabelTextView"
        app:layout_constraintStart_toEndOf="@id/timeLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/walkTitleTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/distanceTextView"
        style="@style/WalkListItemTrackingData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/distanceLabelTextView"
        app:layout_constraintTop_toTopOf="@id/timeTextView"
        tools:text="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/averageSpeedLabelTextView"
        style="@style/WalkListItemTrackingDataLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/walk_list_item_speed_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/distanceLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/walkTitleTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/averageSpeedTextView"
        style="@style/WalkListItemTrackingData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/averageSpeedLabelTextView"
        app:layout_constraintTop_toTopOf="@id/timeTextView"
        tools:text="0.0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/Barrier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="timeTextView, distanceTextView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/mapImageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Barrier"
        tools:src="@mipmap/ic_launcher" />

</androidx.constraintlayout.widget.ConstraintLayout>